--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -167,9 +167,9 @@
 </style>
 
 
-<main>
+<main class="w-full">
 
-  <div class="left-side">
+  <div class=" mx-auto">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 982 239" fill="none" class="angular-logo">
       <g clip-path="url(#a)">
         <path fill="url(#b)"
@@ -202,14 +202,14 @@
 
 <hr>
 
-<main class=" mx-auto my-3 p-10">
+<main class="w-full mx-auto my-3 p-10 bg-color  ">
   <div class="flex mx-auto justify-center">
 
-    <div class="m-5 border-2">
-      <p class="text-center p-5"> ngRx List </p>
+    <div class="m-5 w-[40rem] border-2">
+      <p class="text-center p-5 font-bold text-2xl"> ngRx List </p>
       <hr>
 
-      <div class="flex justify-between">
+      <div class="flex justify-between  font-bold">
         <div>
           <p class="px-4 py-1 mx-1">No.</p>
         </div>
@@ -297,9 +297,9 @@
 
     </div>
 
-    <div class="m-5 border-2">
-      <p class="text-center p-5">Static List </p>
-      <div class="flex justify-between">
+    <div class="m-5 w-[40rem]  border-2">
+      <p class="text-center p-5 font-bold text-2xl">Static List </p>
+      <div class="flex justify-between  font-bold">
         <div>
           <p class="px-4 py-1 mx-1">No.</p>
         </div>
